# ScoreAI

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Caddyfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend-svelte  README.md  compose.yaml  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci_backend.yml  ci_frontend.yml  ci_shared.yml  deploy.yaml  frontend.yml  run_ci.yml  test.yml  test_docker.yaml
backend/: .pylintrc  README.md  pyproject.toml  pytest.ini
backend/alembic/versions/: add_last_login.py
backend/app/: agent.py  config.py  credits.py  db.py  file_helper.py  imslp.py  main.py  s3_helper.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 3e1260cbad86_initial_migration.py  4a2b2b8b97b4_add_short_description_fr_and_long_.py  8662fe315087_add_role.py  997eac45fcda_initial_migration.py  a446b5001994_initial_migration.py  d307da553f07_initial_migration.py  de41477eff84_add_style_and_key_in_score_table.py
backend/scripts/: run.sh
backend/tests/: conftest.py  test_agent.py  test_agent_extra.py  test_db.py  test_db_extra.py  test_file_helper.py  test_imslp.py  test_imslp_utils.py  test_imslp_utils_extra.py  test_main.py  test_users.py
frontend/: .pylintrc  pyproject.toml  pytest.ini
frontend-svelte/src/routes/login/: +page.server.ts  +page.svelte
frontend-svelte/ui/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts
frontend-svelte/ui/messages/: en.json  fr.json
frontend-svelte/ui/src/: app.css
frontend-svelte/ui/src/lib/components/: AgentChat.svelte  DarkModeToggle.svelte  Sidebar.svelte
frontend-svelte/ui/src/lib/server/: api.ts
frontend-svelte/ui/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
frontend-svelte/ui/src/routes/account/: +page.server.ts  +page.svelte
frontend-svelte/ui/src/routes/admin/: +page.server.ts  +page.svelte
frontend-svelte/ui/src/routes/api/pdf/[...filepath]/: +server.ts
frontend-svelte/ui/src/routes/db-viewer/: +page.server.ts  +page.svelte
frontend-svelte/ui/src/routes/login/: +page.server.ts  +page.svelte
frontend-svelte/ui/src/routes/logout/: +page.server.ts
frontend-svelte/ui/src/routes/privacy/: +page.svelte
frontend-svelte/ui/src/routes/reader/[id]/: +page.server.ts  +page.svelte
frontend-svelte/ui/src/routes/success/: +page.server.ts  +page.svelte
frontend-svelte/ui/src/routes/terms/: +page.svelte
frontend/locales/en/LC_MESSAGES/: messages.mo
frontend/scripts/: run.sh
frontend/tests/: conftest.py  test_account.py  test_admin.py  test_app.py  test_database.py  test_reader.py  test_welcome.py
frontend/tests/components/: test_agent.py  test_agent_frontend.py  test_api.py  test_api_extended.py  test_pdf_viewer.py
frontend/ui/: account.py  admin.py  app.py  database.py  locales.py  reader.py  welcome.py
frontend/ui/components/: agent.py  api.py  db_viewer.py  pdf_viewer.py  utils.py
frontend_react/src/: api.ts
frontend_react/src/components/: Agent.tsx
infrastructure/: main.tf  setup.sh
locales/: strings.pot
locales/en/LC_MESSAGES/: messages.po
locales/fr/LC_MESSAGES/: messages.mo  messages.po
postgres-init/: 01_mcp_readonly.sql
scoreai/backend/: main.py
scoreai/frontend/: add_score.py  config.py  reader.py  welcome.py
script/: run.sh  test.ipynb
script/imslp_scrapping/: test.py
script/pdf_read/: test.py
scripts/: gettext.sh  run_all.sh
shared/: .pylintrc  README.md  pyproject.toml  pytest.ini
shared/shared/: __init__.py  responses.py  scores.py  settings.py  user.py
shared/tests/: test_responses.py  test_scores.py  test_user.py
src/: __init__.py
src/backend/: agent.py  db.py  main.py
src/frontend/: account.py  add_score.py  app.py  database.py  locales.py  utils.py  welcome.py
src/frontend/components/: api.py  ui_widgets.py
src/scoreai/: config.py
src/scoreai/backend/: agent.py  db.py  main.py
src/scoreai/frontend/: app.py  database.py  locales.py  reader.py  welcome.py
src/scoreai/frontend/components/: agent.py  api.py  db_viewer.py  pdf_viewer.py  ui_widgets.py
src/scoreai/shared_models/: responses.py  scores.py
src/shared_models/: responses.py  score_models.py
tests/: conftest.py  test_empty.py
tests/backend/: test_agent.py  test_db.py  test_main.py
tests/frontend/: test_api.py  test_app.py  test_database.py  test_welcome.py
tests/frontend/components/: test_agent_frontend.py  test_api.py  test_db_viewer.py  test_pdf_viewer.py
