[project]
name = "ScoreAI"
version = "0.1.0"
description = "scoreai monorepo"
dependencies = [
    "streamlit>=1.54.0",
]

[tool.uv.workspace]
members = ["backend", "frontend", "shared"]

[tool.mypy]
mypy_path = "shared:backend:frontend"
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = ["backend", "frontend", "shared"]
testpaths = ["backend/tests", "frontend/tests", "shared/tests"]
asyncio_mode = "strict"
