[project]
name = "ScoreGuide"
version = "0.1.0"
description = "scoreguide monorepo"
dependencies = []

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=7.4.4",
    "pyyaml>=6.0.2",
    "black>=25.9.0",
    "pylint>=4.0.2",
    "mypy>=1.18.2",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.2.0",
    "anyio>=4.11.0",
]

[tool.uv.workspace]
members = ["backend", "shared"]

[tool.mypy]
mypy_path = "shared:backend"
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = ["backend", "shared"]
testpaths = ["backend/tests", "shared/tests"]
asyncio_mode = "strict"
