[project]
name = "ui"
version = "0.1.0"
description = "Read and play music with AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pathlib>=1.0.1",
    "streamlit[pdf]>=1.50.0",
    "streamlit-aggrid>=1.1.9",
    "pdf2image>=1.17.0",
    "streamlit-image-coordinates>=0.4.0",
    "shared",
    "extra-streamlit-components>=0.1.81",
]
[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=7.4.4",
    "pyyaml>=6.0.2",
    "black>=25.9.0",
    "pylint>=4.0.2",
    "mypy>=1.18.2",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.2.0",
    "anyio>=4.11.0",
    "app",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnusedFunction = false

[tool.uv.sources]
shared = { path = "../shared", editable = true }
app = { workspace = true }
