[project]
name = "shared"
version = "0.1.0"
description = "Shared stuff"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.3",
    "pydantic-ai>=1.2.1",
    "sqlmodel>=0.0.27",
]
[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=7.4.4",
    "pyyaml>=6.0.2",
    "black>=25.9.0",
    "pylint>=4.0.2",
    "mypy>=1.18.2",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.2.0",
    "anyio>=4.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnusedFunction = false
