[project]
name = "shared"
version = "0.1.0"
description = "Shared stuff"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.3",
    "pydantic-ai>=1.2.1",
    "sqlmodel>=0.0.27",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnusedFunction = false
